--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -138,7 +138,7 @@ a {
 }
 
 .footer-menu {
-    margin-left: 2000px;
+    display: none;
 }
 
 .footer-name {
@@ -222,6 +222,7 @@ a {
         float: right;
         margin: 0;
         margin-top: 16px;
+        display: block;
     }
 
     .footer-menu a {
