--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -222,7 +222,7 @@ a {
         float: right;
         margin: 0;
         margin-top: 16px;
-        display: block;
+        display: initial;
     }
 
     .footer-menu a {
